crates/mold_hir/tests/snapshots/snapshots__delete_using_alias_analysis.snap
---
source: crates/mold_hir/tests/snapshots.rs
assertion_line: 205
expression: render_analysis(&analysis)
---
diagnostics:
- Warning | Table alias 'o' should be introduced with AS | 33..34
tables:
- <none>
columns:
- <none>
output_columns:
- <none>
