crates/mold_hir/tests/snapshots/snapshots__dml_cte_resolution_analysis.snap
---
source: crates/mold_hir/tests/snapshots.rs
expression: render_analysis(&analysis)
---
diagnostics:
- Warning | UPDATE without WHERE affects all rows | 17..80
tables:
- <none>
columns:
- <none>
output_columns:
- <none>
