crates/mold_hir/tests/snapshots/snapshots__with_delete_cte_analysis.snap
---
source: crates/mold_hir/tests/snapshots.rs
expression: render_analysis(&analysis)
---
diagnostics:
- <none>
tables:
- <none>
columns:
- <none>
output_columns:
- <none>
